--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="/books">Alla våra frukter</a></li>
             <li><a href="/books/new">Lägg till book</a></li>
+            <li><a href="/books/user">lägg till användare</a></li>
         </ul>
     </nav>
     <hr>
