--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,16 +10,15 @@
         <h1 class="logo">Books</h1>
     </header>
     <hr>
-    <nav>
-        <ul>
-            <li><a href="/books">Alla våra frukter</a></li>
-            <li><a href="/books/new">Lägg till book</a></li>
-            <li><a href="/books/user">lägg till användare</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="/books">Alla våra böcker</a></li>
+                <li><a href="/books/new">Lägg till book</a></li>
+                <li><a href="/books/user">lägg till användare</a></li>
+            </ul>
+        </nav>
     <hr>
     <%= yield %>
-    <hr>
     <footer>
         <p>Kontakta oss</p>
     </footer>
