--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,6 +15,7 @@
                 <li><a href="/books">Alla våra böcker</a></li>
                 <li><a href="/books/new">Lägg till book</a></li>
                 <li><a href="/books/new_user">lägg till användare</a></li>
+                <li><a href="/books/login">Login</a></li>
             </ul>
         </nav>
     <hr>
