--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,5 +1,5 @@
-<form action="/users" method="post">
-   <label>User <input type="text" name="user"></label>
+<form action="/new_user" method="post">
+   <label>User<input type="text" name="user"></label>
    <label>Password <input type="text" name="password"></label>
    <input type="submit" value="Spara">
 </form>
